@startuml
' Definición de las clases

class Frame {
    - contenido: char[][]
    + Frame(contenido: char[][])
    + static crearFrame1(): Frame
    + static crearFrame2(): Frame
    + posicionFrame(): void
    + getContenido(): char[][]
}

class ResultadoCombinado {
    - contenido: char[][]
    + ResultadoCombinado(ancho: int, alto: int)
    + combinar(frame1: Frame, frame2: Frame): void
}

class Pantalla {
    - clase: String
    + Pantalla(clase: String)
    + getFrame(frame1: Frame, frame2: Frame, resultado: ResultadoCombinado): void
}

class Main {
    + main(args: String[]): void
}

' Relaciones entre las clases
Main --> Pantalla : usa
Pantalla --> Frame : usa
Pantalla --> ResultadoCombinado : usa
ResultadoCombinado --> Frame : usa

@enduml